better version label name, fix dark text in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,7 +70,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  color: rgb(38, 40, 39);
   font-weight: 300;
 }
 
@@ -280,7 +279,6 @@ main a {
 .features {
   margin-top: 3rem;
   padding: 2rem 0;
-  color: rgba(38, 40, 39, 0.84);
 }
 
 .feature {
